--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./images/logo.svg" alt="логотип" class="header__logo">
+    <img src="./images/logo.svg" alt="logo" class="header__logo">
     <div class="header__lang-links">
       <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
       <a href="#" class="header__lang-link">En</a>
@@ -19,7 +19,7 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img src="./images/lead-image.svg" alt="Карта маршрута" class="lead__image">
+      <img src="./images/lead-image.svg" alt="map" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro">
@@ -34,18 +34,18 @@
       </ul>
     </section>
     <section class="photo-grid">
-      <img src="./images/train.jpg" alt="поезд" class="photo-grid__item">
-      <img src="./images/antharva-tulsi.jpg" alt="горы" class="photo-grid__item">
-      <img src="./images/tuman.jpg" alt="туман" class="photo-grid__item">
-      <img src="./images/sochi.jpg" alt="Сочи" class="photo-grid__item">
-      <img src="./images/ice-baikal.jpg" alt="замерзший Байкал" class="photo-grid__item">
-      <img src="./images/baikal.jpg" alt="Байкал" class="photo-grid__item">
-      <img src="./images/elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
-      <img src="./images/stanislav-kondratiev.jpg" alt="дорога" class="photo-grid__item">
-      <img src="./images/kamchatka.jpg" alt="Камчатка" class="photo-grid__item">
-      <img src="./images/kamchatka2.jpg" alt="Камчатка" class="photo-grid__item">
-      <img src="./images/baikal2.jpg" alt="Байкал" class="photo-grid__item">
-      <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__item">
+      <img src="./images/train.jpg" alt="train" class="photo-grid__item">
+      <img src="./images/antharva-tulsi.jpg" alt="mountains" class="photo-grid__item">
+      <img src="./images/tuman.jpg" alt="fog" class="photo-grid__item">
+      <img src="./images/sochi.jpg" alt="Sochi" class="photo-grid__item">
+      <img src="./images/ice-baikal.jpg" alt="Baikal" class="photo-grid__item">
+      <img src="./images/baikal.jpg" alt="Baikal" class="photo-grid__item">
+      <img src="./images/elbrus.jpg" alt="Elbrus" class="photo-grid__item">
+      <img src="./images/stanislav-kondratiev.jpg" alt="Road" class="photo-grid__item">
+      <img src="./images/kamchatka.jpg" alt="Kamchatka" class="photo-grid__item">
+      <img src="./images/kamchatka2.jpg" alt="Kamchatka" class="photo-grid__item">
+      <img src="./images/baikal2.jpg" alt="Baikal" class="photo-grid__item">
+      <img src="./images/ergaki.jpg" alt="Ergaki" class="photo-grid__item">
     </section>
     <section class="places">
       <div class="place">
@@ -54,7 +54,7 @@
           <p class="place__url-heading">URL</p>
           <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
         </div>
-        <img src="./images/kurshskaya-kosa.jpg" alt="Куршская коса" class="place__image">
+        <img src="./images/kurshskaya-kosa.jpg" alt="Kurshskaya kosa" class="place__image">
         <article class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</article>
         <article class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</article>
       </div>
@@ -64,7 +64,7 @@
           <p class="place__url-heading">URL</p>
           <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
         </div>
-        <img src="./images/kolskiy.jpg" alt="Кольский" class="place__image">
+        <img src="./images/kolskiy.jpg" alt="Kolskiy" class="place__image">
         <article class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</article>
         <article class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</article>
       </div>
@@ -74,7 +74,7 @@
           <p class="place__url-heading">URL</p>
           <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
         </div>
-        <img src="./images/altai.jpg" alt="Алтай" class="place__image">
+        <img src="./images/altai.jpg" alt="Altai" class="place__image">
         <article class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра.  А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</article>
         <article class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</article>
       </div>
@@ -84,7 +84,7 @@
           <p class="place__url-heading">URL</p>
           <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
         </div>
-        <img src="./images/whinter-baikal.jpg" alt="Зимний Байкал" class="place__image">
+        <img src="./images/whinter-baikal.jpg" alt="whinter Baikal" class="place__image">
         <article class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</article>
         <article class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</article>
       </div>
@@ -94,7 +94,7 @@
           <p class="place__url-heading">URL</p>
           <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
         </div>
-        <img src="./images/kareliya.jpg" alt="Карелия" class="place__image">
+        <img src="./images/kareliya.jpg" alt="Kareliya" class="place__image">
         <article class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</article>
       </div>
     </section>
