--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./images/logo.svg" alt="logo" class="header__logo">
+    <img src="./images/logo.svg" alt="логотип" class="header__logo">
     <div class="header__lang-links">
       <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
       <a href="#" class="header__lang-link">En</a>
