--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <figure class="lead__figure"><img src="./images/lead-image.svg" alt="карта" class="lead__image">
+      <figure class="lead__figure">
+        <img src="./images/lead-image.svg" alt="карта" class="lead__image">
         <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
       </figure>
     </section>
@@ -119,11 +120,11 @@
     <footer class="footer">
       <nav class="footer__menu">
         <ul class="footer__links">
-          <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-          <li><a href="https://yandex.ru/pogoda" class="footer__link">Расписание</a></li>
-          <li><a href="https://rasp.yandex.ru" class="footer__link">Карты</a></li>
-          <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-          <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+          <li class="footer__link-item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+          <li class="footer__link-item"><a href="https://yandex.ru/pogoda" class="footer__link">Расписание</a></li>
+          <li class="footer__link-item"><a href="https://rasp.yandex.ru" class="footer__link">Карты</a></li>
+          <li class="footer__link-item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+          <li class="footer__link-item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
         </ul>
       </nav>
       <p class="footer__copyright">&copy;2022.Никонова Анна</p>
